<resources>
    <string name="app_name">Sob Pressão!!!</string>

    <string name="timestamp">Timestamp</string>
    <string name="device_information">Device Information</string>
    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="id">Id</string>
    <string name="product">Product</string>
    <string name="build_info">Build Info</string>
    <string name="sdk">SDK</string>
    <string name="release">Release</string>
    <string name="incremental">Incremental</string>

    <string name="times_favoritos">Times favoritos</string>
    <string name="lista_dos_seus_times_favoritos">Lista dos seus times favoritos</string>
    <string name="remover_time">Remover time</string>
    <string name="add_time">Adicionar aos favoritos</string>
    <string name="remove_time">Remover dos favoritos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_time1">Mussum Ipsum, cacilds vidis litro abertis. In elementis mé pra quem é amistosis quis leo. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Interagi no mé, cursus quis, vehicula ac nisi. A ordem dos tratores não altera o pão duris.</string>
    <string name="info_time2">São Paulo Futebol Clube (conhecido apenas por São Paulo e cujo acrônimo é SPFC) é uma associação esportiva brasileira fundada em 1930 e refundada em 1935.2 No futebol, o clube é um dos maiores vencedores do Brasil e um dos mais bem sucedidos, sendo que, dentre seus principais títulos, destacam-se os seis Campeonatos Brasileiros, as três Copas Libertadores, os três Campeonatos Mundiais (duas Copas Intercontinentais e uma Copa do Mundo de Clubes da FIFA), e os vinte e um Campeonatos Paulistas conquistados.3 Quanto a títulos internacionais, o São Paulo, com 12 conquistas, é o terceiro time da América do Sul com o maior número de troféus, ficando atrás somente de Boca Juniors e Independiente. A agremiação também possui tradição em outros esportes que não o futebol, como no atletismo, onde seu atleta Adhemar Ferreira da Silva foi o primeiro bicampeão olímpico do país e quebrou recordes mundiais, os quais são responsáveis pelas duas estrelas douradas no escudo do clube.</string>
    <string name="escudo">escudo:</string>
    <string name="camisa">camisa:</string>
    <string name="estadio">estadio:</string>
    <string name="favoritos">Favoritos</string>
    <string name="subtitulo_time_favorito">Procure seu time favorito</string>
    <string name="pais">Brasil</string>
    <string name="liga">Brasileirão</string>
    <string name="escolha_o_pais">Escolha o País</string>
    <string name="escolha_a_liga">Escolha a Liga</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="regras">Regras</string>
    <string name="jogar">Jogar</string>
    <string name="pergunta">Se o pato perder a pata ele fica manco ou viúvo?</string>
    <string name="responder">Responder</string>
    <string name="sair">Sair</string>
    <string name="_10_seg">10 seg</string>
    <string name="acertos_3_x_3_erros">Acertos 0 x 0 erros</string>
    <string name="regra1">1 - Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="regra3">3 - Sed ut error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="regra2">2 - Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="resposta_1">Manco</string>
    <string name="resposta_2">Viúvo</string>
    <string name="resposta_3">Ovo de pato</string>
    <string name="resposta_4">PCD</string>
    <string name="digite_aqui_seu_nome">Digite aqui seu nome</string>
    <string name="digite_aqui_usuario">Digite aqui o nome do usuário</string>
    <string name="digite_aqui_o_seu_e_mail">Digite aqui o seu E-mail</string>
    <string name="confirme_o_e_mail">Confirme o e-mail</string>
    <string name="digite_aqui_a_sua_senha">Digite aqui a sua senha</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="imgavatar">imgAvatar</string>
    <string name="login">Login</string>
    <string name="clique_aqui">Clique aqui!</string>
    <string name="usuario_ou_email">E-mail do usuário</string>
    <string name="senha">Senha</string>
    <string name="nao_tem_conta">Ainda não tem conta?!</string>
    <string name="login_facebook">Login Facebook</string>
    <string name="login_google">Login Google</string>
    <string name="logoff_google">Logoff Google</string>
    <string name="sobre">Sobre</string>
    <string name="brasil">Brasil</string>
    <string name="inglaterra">Inglaterra</string>
    <string name="alemanha">Alemanha</string>
    <string name="franca">França</string>
    <string name="espanha">Espanha</string>
    <string name="italia">Itália</string>
    <string name="argentina">Argentina</string>
    <string name="selecione_pais">Selecione um país...</string>

    <string-array name="lista_paises">
        <item>@string/selecione_pais</item>
        <item>@string/brasil</item>
        <item>@string/inglaterra</item>
        <item>@string/alemanha</item>
        <item>@string/franca</item>
        <item>@string/espanha</item>
        <item>@string/italia</item>
        <item>@string/argentina</item>
    </string-array>

    <string name="json">perguntas.json</string>
    <string name="perguntas">perguntas</string>
    <string name="pergunta_id">id</string>
    <string name="pergunta_id_tipo">id_tipo</string>
    <string name="pergunta_tipo">tipo</string>
    <string name="pergunta_imagem">imagem</string>
    <string name="pergunta_pergunta">pergunta</string>
    <string name="pergunta_alternativa1">alternativa1</string>
    <string name="pergunta_alternativa2">alternativa2</string>
    <string name="pergunta_alternativa3">alternativa3</string>
    <string name="pergunta_alternativa4">alternativa4</string>
    <string name="pergunta_resposta">resposta</string>

    <string name="facebook_app_id">301668537537950</string>
    <string name="fb_login_protocol_scheme">fb301668537537950</string>
    <string name="perm_facebook">public_profile</string>
    <string name="falha_facebook">Falha de Autenticação.</string>
    <string name="fb_cancelado">Ação cancelada.</string>



</resources>
