<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegrasActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/lista_favoritos_seta_voltar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_sob_pressao_24dp" />

    <TextView
        android:id="@+id/RegrasActivity_textViewRegras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regras"
        android:textSize="40dp"
        android:textColor="@color/colorLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RegrasActivity_textViewRegra1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:text="@string/regra1"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/RegrasActivity_textViewRegras"
        app:layout_constraintBottom_toTopOf="@+id/RegrasActivity_textViewRegra2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/RegrasActivity_textViewRegra2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:text="@string/regra2"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/RegrasActivity_textViewRegra1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/RegrasActivity_textViewRegra3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:text="@string/regra3"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/RegrasActivity_textViewRegra2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/MainActivity_buttonJogar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/jogar"
        android:layout_marginVertical="20dp"
        android:background="@color/colorButtons"
        android:textColor="@color/colorTextButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>