<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PerguntaActivity"
    android:background="@drawable/grama_textura">

    <TextView
        android:id="@+id/PerguntaActivity_textViewPlacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acertos_3_x_3_erros"
        android:textColor="@color/colorText"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/PerguntaActivity_fragmentPergunta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

    </FrameLayout>

    <ImageView
        android:id="@+id/PerguntaActivity_imageViewRelogio"
        android:layout_width="40dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/clock"
        app:layout_constraintEnd_toStartOf="@+id/PerguntaActivity_textViewTempo"
        app:layout_constraintTop_toTopOf="@+id/PerguntaActivity_textViewTempo"
        app:layout_constraintBottom_toBottomOf="@+id/PerguntaActivity_textViewTempo"/>

    <TextView
        android:id="@+id/PerguntaActivity_textViewTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/_10_seg"
        android:textColor="@color/colorRed"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@+id/PerguntaActivity_buttonSair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:id="@+id/PerguntaActivity_buttonSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        android:textColor="@color/colorText"
        android:background="@drawable/buttonshapesmall"
        android:textSize="16sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/PerguntaActivity_buttonResponder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/responder"
        android:background="@drawable/buttonshapesmall"
        android:textColor="@color/colorTextButtons"
        android:textSize="16sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>