<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    android:background="@drawable/grama_textura">



    <ImageView
        android:id="@+id/cadastro_imgLogo_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/textbox_shape">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/digite_aqui_seu_nome"
        app:hintTextColor="@color/colorTextWhite"
        android:theme="@style/StyledTilEditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_nome_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Nome"
            android:textColor="@color/colorTextWhite"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/digite_aqui_usuario"
        app:hintTextColor="@color/colorTextWhite"
        android:theme="@style/StyledTilEditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_usuario_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/digite_aqui_o_seu_e_mail"
        app:hintTextColor="@color/colorTextWhite"
        android:theme="@style/StyledTilEditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirme_o_e_mail"
        app:hintTextColor="@color/colorTextWhite"
        android:theme="@style/StyledTilEditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_conrfimaEmail_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/digite_aqui_a_sua_senha"
        app:hintTextColor="@color/colorTextWhite"
        android:theme="@style/StyledTilEditText"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_senha_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirme_a_senha"
        app:hintTextColor="@color/colorTextWhite"
        android:theme="@style/StyledTilEditText"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cadastro_conrfimaSenha_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextWhite"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/cadastro_buttonCadastrar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/buttonshape"
        android:text="Cadastrar novo usuário"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        />


</LinearLayout>
</ScrollView>